fixed navbar overlapping experience and added support for devices with width <= 500

--- a/php/src/components/header/header.css
+++ b/php/src/components/header/header.css
@@ -15,6 +15,7 @@
     transition: 1s;
     font-size: var(--font-weight-big);
     text-align: center;
+    z-index: 2;
 }
     .header:hover{
         transition: 1s ease-in-out;
